fix: prevent post timestamp from aligning text center when hovered over

--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -57,9 +57,6 @@
 
 .post-timestamp-container {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .post-full-date {
@@ -71,6 +68,7 @@
   white-space: nowrap;
   overflow: hidden;
   top: 20px;
+  left: -63px;
 }
 
 .post-full-date div {
